apps/truenas/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas
  labels:
    kubernetes.io/service-name: truenas
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.121
ports:
  - name: http
    port: 80
    protocol: TCP
