apps/truenas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-skipverify@kubernetescrd
spec:
  externalName: galactica.lan
  ports:
    - name: https
      port: 443
  type: ExternalName
