apps/truenas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - truenas.hubbe.club
      secretName: truenas-cert
  rules:
    - host: truenas.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 80
